--- a/OpenIIoT.SDK.Packaging/OpenIIoT.SDK.Packaging.csproj
+++ b/OpenIIoT.SDK.Packaging/OpenIIoT.SDK.Packaging.csproj
@@ -42,10 +42,6 @@
       <HintPath>..\packages\Newtonsoft.Json.10.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="OpenIIoT.SDK, Version=0.5.0.37036, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\OpenIIoT.Core\Source\OpenIIoT.SDK\bin\Debug\OpenIIoT.SDK.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.IO.Compression" />
@@ -85,6 +81,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="Utility.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="OpenIIoT.ruleset" />
