--- a/OpenIIoT.SDK.Packaging/OpenIIoT.SDK.Packaging.csproj
+++ b/OpenIIoT.SDK.Packaging/OpenIIoT.SDK.Packaging.csproj
@@ -31,6 +31,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet>openiiot.ruleset</CodeAnalysisRuleSet>
+    <DocumentationFile>bin\Release\OpenIIoT.SDK.Packaging.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="BouncyCastle.OpenPgp, Version=1.8.1.0, Culture=neutral, PublicKeyToken=0e99375e54769942, processorArchitecture=MSIL">
