--- a/OpenIIoT.SDK.Packaging.Tests/OpenIIoT.SDK.Packaging.Tests.csproj
+++ b/OpenIIoT.SDK.Packaging.Tests/OpenIIoT.SDK.Packaging.Tests.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Operations\ManifestGenerator.cs" />
     <Compile Include="PackagingUpdateEventArgs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utility.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
