--- a/OpenIIoT.SDK.Packaging/OpenIIoT.SDK.Packaging.csproj
+++ b/OpenIIoT.SDK.Packaging/OpenIIoT.SDK.Packaging.csproj
@@ -53,10 +53,6 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="Utility.PGPSignatureTools, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Utility.PGPSignatureTools.1.0.0\lib\Utility.PGPSignatureTools.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ArgumentValidator.cs" />
@@ -75,6 +71,7 @@
     <Compile Include="PackagingUpdateType.cs" />
     <Compile Include="PackagingOperationType.cs" />
     <Compile Include="PackagingUpdateEventArgs.cs" />
+    <Compile Include="PGPSignature.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
