--- a/OpenIIoT.SDK.Packaging.Tests/packages.config
+++ b/OpenIIoT.SDK.Packaging.Tests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BouncyCastle.OpenPGP" version="1.8.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net452" />
   <package id="OpenCover" version="4.6.519" targetFramework="net452" />
   <package id="StyleCop.Analyzers" version="1.1.0-beta001" targetFramework="net452" developmentDependency="true" />
