--- a/OpenIIoT.SDK.Packaging/OpenIIoT.SDK.Packaging.csproj
+++ b/OpenIIoT.SDK.Packaging/OpenIIoT.SDK.Packaging.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ArgumentValidator.cs" />
+    <Compile Include="Manifest\IPackageManifest.cs" />
     <Compile Include="Manifest\PackageManifest.cs" />
     <Compile Include="Manifest\PackageManifestBuilder.cs" />
     <Compile Include="Manifest\PackageManifestFile.cs" />
