--- a/OpenIIoT.SDK.Packaging/OpenIIoT.SDK.Packaging.csproj
+++ b/OpenIIoT.SDK.Packaging/OpenIIoT.SDK.Packaging.csproj
@@ -59,7 +59,9 @@
     <Compile Include="Manifest\IPackageManifest.cs" />
     <Compile Include="Manifest\PackageManifest.cs" />
     <Compile Include="Manifest\PackageManifestBuilder.cs" />
+    <Compile Include="Manifest\IPackageManifestFile.cs" />
     <Compile Include="Manifest\PackageManifestFile.cs" />
+    <Compile Include="Manifest\IPackageManifestSignature.cs" />
     <Compile Include="Manifest\PackageManifestSignature.cs" />
     <Compile Include="PackagingConstants.cs" />
     <Compile Include="Operations\ManifestExtractor.cs" />
